# opentelemetry-intro-gcf-python

./: .gitignore  README.md  pyproject.toml
src/: main.py  telemetry.py
